; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_push.c_get_eof.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_push.c_get_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.ao_push_state* }
%struct.ao_push_state = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ao*)* @get_eof to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_eof(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca %struct.ao_push_state*, align 8
  %4 = alloca i32, align 4
  store %struct.ao* %0, %struct.ao** %2, align 8
  %5 = load %struct.ao*, %struct.ao** %2, align 8
  %6 = getelementptr inbounds %struct.ao, %struct.ao* %5, i32 0, i32 0
  %7 = load %struct.ao_push_state*, %struct.ao_push_state** %6, align 8
  store %struct.ao_push_state* %7, %struct.ao_push_state** %3, align 8
  %8 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %9 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %8, i32 0, i32 0
  %10 = call i32 @pthread_mutex_lock(i32* %9)
  %11 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %12 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  store i32 %16, i32* %4, align 4
  %17 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %18 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %17, i32 0, i32 0
  %19 = call i32 @pthread_mutex_unlock(i32* %18)
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
